[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'apollo-runtime-wasm'
version = '1.0.0'
[dependencies.apollo-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['apollo-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
